<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mapText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:hint="Search Location" />

        <Button
            android:id="@+id/search_button_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchLocation"
            android:text="Search" />
    </LinearLayout>

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/confirm_button_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirmLocation"
        android:text="Confirm" />

</LinearLayout>