...
        android:padding="10dp"
        android:textSize="22dp"
        android:text="HabitEventName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/habit_event_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
...
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:text="@string/choose_a_location" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_pin_drop_24" />
    </LinearLayout>

    <TextView
...
