<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/myday_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
<!--            android:enabled="false"-->
<!--            android:focusable="false"-->
<!--            android:focusableInTouchMode="false"-->

        <TextView
            android:id="@+id/myday_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Title"
            android:textSize="30sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/myday_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"/>

</LinearLayout>