<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.edithabit.EdithabitFragment" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:ems="20"
        android:maxLength="20"
        android:hint="Habit title"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/reason_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:ems="30"
        android:maxLength="30"
        android:hint="Reason"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:text="date" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Switch
        android:id="@+id/ispublic_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Public" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/plan_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Plan:">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical" >
            <CheckBox
                android:id="@+id/monday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday" />
            <CheckBox
                android:id="@+id/tuesday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tuesday" />
            <CheckBox
                android:id="@+id/wednesday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wednesday" />
            <CheckBox
                android:id="@+id/thursday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thursday" />
            <CheckBox
                android:id="@+id/friday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Friday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical" >
            <CheckBox
                android:id="@+id/saturday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saturday" />
            <CheckBox
                android:id="@+id/sunday_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunday" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>