<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".ui.manage.ManageFragment"
    android:id="@+id/managefragmentId">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<!--        android:choiceMode="singleChoice"-->
<!--        android:listSelector="@android:color/darker_gray"-->

    <TextView
        android:id="@+id/no_habits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Start by adding a habit"
        android:visibility="invisible"/>

</LinearLayout>